Hover on overflowing text fixed

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ html, body {
     grid-auto-rows: min-content;
     gap: 2rem 4rem;
     margin: 0 5%;
-    /* margin-top: 100px; */
 }
 
 .tablet .toolbar {
@@ -28,7 +27,7 @@ html, body {
     width: 100%;
     height: 6%;
     background: black;
-    border-radius: 0 0 10px 10px;
+    overflow: hidden;
 }
 
 .app-section .app {
@@ -51,9 +50,17 @@ html, body {
 }
 
 .app .name {
+    text-align: center;
     max-width: 110px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     user-select: none;
+}
+
+.app:hover .name {
+    display: flex;
+    justify-content: center;
+    overflow: visible;
+    text-overflow: initial;
 }
